--- a/frontend/public/lang/en.json
+++ b/frontend/public/lang/en.json
@@ -4,6 +4,6 @@
     "login.password": "Password",
     "login.rememberMe": "Remember me",
     "login.forget": "forget password",
-    "login.login": "login",
+    "login.login": "Log in",
     "login.or": "or"
 }
